--- a/curriculo/src/app/home/home.component.html
+++ b/curriculo/src/app/home/home.component.html
@@ -18,7 +18,7 @@
             <p class="row-1">Github: <a href="https://github.com/samfir31" target="_blank">https://github.com/samfir31</a></p>
             <p class="row-1">Linkedin: <a href="https://www.linkedin.com/in/samuel-firmino/" target="_blank">https://www.linkedin.com/in/samuel-firmino/</a></p>
             <p class="row-1">Email: samfir31@gmail.com</p>
-            <p class="row-1">Celular: (11) 95362-5399</p>
+            <p class="row-1">Celular: (--) *****-5399</p>
         </h2>            
         </div> 
     </div>
@@ -35,7 +35,7 @@
                   
                   <h6 class="card-subtitle mb-2 text-muted">Pontifícia Universidade Católica de Minas Gerais</h6>
                   <p class="card-text">Engenharia de Software - pós graduação 
-                    Outubro/2020 - Dezembro/2021 
+                    Outubro/2020 - Cursando
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted">GENERATION BRASIL</h6>
                   <p class="card-text">Desenvolvedor Web Java Junior – Fullstack 
